# Pawn.Net

./: PawnX64.md  README.md
Pawn.Net/: Pawn.Net.sln
Pawn.Net/Benchmark/: Benchmark.csproj  BenchmarkBase.cs  Program.cs
Pawn.Net/Benchmark/scripts/: build.bat  main.amx  main.p
Pawn.Net/Benchmark/scripts/include/: core.p
Pawn.Net/ManagedTests/: ManagedTests.csproj  Program.cs
Pawn.Net/NativePluginTest/: NativePluginTest.vcxproj  NativePluginTest.vcxproj.filters  plugin.h
Pawn.Net/Pawn/amx64/include/: amx.h  amx_loader.h  signalmgr.h
Pawn.Net/Pawn/amx64/lib/: amx64.lib
Pawn.Net/Pawn/pawnrun/: CMakeLists.txt
Pawn.Net/Pawn/pawnrun/src/: main.cpp
Pawn.Net/Pawn/signalmgr/: CMakeLists.txt
Pawn.Net/Pawn/signalmgr/include/: signalmgr.h
Pawn.Net/Pawn/signalmgr/src/: signalmgr.cpp
Pawn.Net/PawnBindings/: AMX.cs  AMXAllocator.cs  AMXCell.cs  AMXLoader.cs  AmxRegister.cs  AmxStatus.cs  NativeLibrary.cs  PawnBindings.csproj
Pawn.Net/PawnPlugin/: PawnPlugin.csproj  PawnPluginBase.cs
Pawn.Net/TestPlugin/: Class1.cs  TestPlugin.csproj
